# Research_Mate_X_crewAI

./: .gitignore  README.md  pyproject.toml  report.md  requirements.txt
outputs/articles/: arxiv_1_Machine_Learning_in_Healthcare.xml  arxiv_2_Machine_Learning_in_Healthcare.xml  arxiv_3_Machine_Learning_in_Healthcare.xml  arxiv_4_Machine_Learning_in_Healthcare.xml  arxiv_5_Machine_Learning_in_Healthcare.xml  pubmed_1_Machine_Learning_in_Healthcare.txt  pubmed_2_Machine_Learning_in_Healthcare.txt  pubmed_3_Machine_Learning_in_Healthcare.txt  pubmed_4_Machine_Learning_in_Healthcare.txt  pubmed_5_Machine_Learning_in_Healthcare.txt
src/research_mate/: crew.py  main.py  main_streamlit.py  utils.py
src/research_mate/config/: agents.yaml  tasks.yaml
src/research_mate/outputs/articles/: arxiv_1_Machine_Learning_in_Healthcare.txt  arxiv_2_Machine_Learning_in_Healthcare.txt  arxiv_3_Machine_Learning_in_Healthcare.txt  arxiv_4_Machine_Learning_in_Healthcare.txt  arxiv_5_Machine_Learning_in_Healthcare.txt  pubmed_1_Machine_Learning_in_Healthcare.txt  pubmed_2_Machine_Learning_in_Healthcare.txt  pubmed_3_Machine_Learning_in_Healthcare.txt  pubmed_4_Machine_Learning_in_Healthcare.txt  pubmed_5_Machine_Learning_in_Healthcare.txt
src/research_mate/tools/: arxiv_tool.py  custom_tool.py  document_search_tool.py  pubmed_tool.py
