[project]
name = "research_mate"
version = "0.1.0"
description = "research_mate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
research_mate = "research_mate.main:run"
run_crew = "research_mate.main:run"
train = "research_mate.main:train"
replay = "research_mate.main:replay"
test = "research_mate.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
run = "research_mate.main:run"
